fix article out of box

--- a/css/article.css
+++ b/css/article.css
@@ -2,7 +2,7 @@
 	margin-bottom: 10px;
 }
 
-#article p {
+#article p,li {
 	word-wrap: break-word;
 	word-break: break-word;
 }
